[package]
name = "bevy_extern_events"
version = "0.1.2"
edition = "2021"
readme = "readme.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_extern_events"
repository = "https://github.com/extrawurst/bevy_extern_events"
keywords = ["bevy", "gamedev", "events"]
description = "Bevy plugin for generic external events to be send to bevy EventReaders"

[dependencies]
once_cell = "1"
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
] }
generic-global-variables = "0.1.1"
